Simplily CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,29 +14,17 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 list(APPEND CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
 
-include(layout)
-
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_compile_definitions(DEBUG _DEBUG)
 endif()
 
 set(CMAKE_CXX_COMPILER clang++-16)
 set(CMAKE_C_COMPILER clang---16)
-set(CMAKE_CXX_FLAGS "-ffile-prefix-map=/src/trafficserver=. -fstack-protector-strong -Wformat -Werror=format-security -g")
-set(CMAKE_C_FLAGS "-ffile-prefix-map=/src/trafficserver=. -fstack-protector-strong -Wformat -Werror=format-security -g")
+set(CMAKE_CXX_FLAGS "-fstack-protector-strong -Wformat -Werror=format-security -g")
+set(CMAKE_C_FLAGS "-fstack-protector-strong -Wformat -Werror=format-security -g")
 set(CMAKE_INSTALL_PREFIX /opt/trafficserver)
-set(CMAKE_INSTALL_BINDIR bin)
-set(CMAKE_INSTALL_SBINDIR bin)
 set(CMAKE_INSTALL_LIBDIR lib)
 set(CMAKE_INSTALL_LIBEXECDIR lib/modules)
-set(CMAKE_INSTALL_SYSCONFDIR etc)
-set(CMAKE_INSTALL_LOCALSTATEDIR var)
-set(CMAKE_INSTALL_RUNSTATEDIR var/run)
-set(CMAKE_INSTALL_DATAROOTDIR share)
-set(CMAKE_INSTALL_DATADIR share/data)
-set(CMAKE_INSTALL_DOCDIR share/doc)
-set(CMAKE_INSTALL_LOGDIR var/log)
-set(CMAKE_INSTALL_CACHEDIR var/cache)
 
 find_library(TSAPI_LIBRARY tsapi PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 
