Add add_header example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,14 @@ set(CMAKE_INSTALL_LIBEXECDIR lib/modules)
 
 find_library(TSAPI_LIBRARY tsapi PATHS ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 
-add_library(atshello MODULE src/hello/hello.cc)
-target_include_directories(atshello PUBLIC ${CMAKE_INSTALL_PREFIX}/include)
-target_link_libraries(atshello PRIVATE ${TSAPI_LIBRARY})
-set_target_properties(atshello PROPERTIES PREFIX "")
-set_target_properties(atshello PROPERTIES SUFFIX ".so")
-install(TARGETS atshello DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
+function(add_atsplugin name)
+  add_library(${name} MODULE ${ARGN})
+  target_include_directories(${name} PRIVATE ${CMAKE_INSTALL_PREFIX}/include)
+  target_link_libraries(${name} PRIVATE ${TSAPI_LIBRARY})
+  set_target_properties(${name} PROPERTIES PREFIX "")
+  set_target_properties(${name} PROPERTIES SUFFIX ".so")
+  install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
+endfunction()
+
+add_atsplugin(hello src/hello/hello.cc)
+add_atsplugin(add_header src/add_header/add_header.cc)
