Remove -Wl,-z,nodlopen from linker flags for plugin to be loaded properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,10 @@ set(CMAKE_C_COMPILER clang---16)
 
 # The compiler and linker options below are copied from
 # https://best.openssf.org/Compiler-Hardening-Guides/Compiler-Options-Hardening-Guide-for-C-and-C++.html
-# and -Wtrampolines is removed since it is unsupported to clang.
+#
+# * -Wtrampolines is removed since it is unsupported to clang.
+# * -Wl,-z,nodlopen is removed to avoid "shared object cannot be dlopen()ed" error.
+#
 set(CMAKE_CXX_FLAGS "-O2 -Wall -Wformat=2 -Wconversion -Wimplicit-fallthrough \
 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=3 \
 -D_GLIBCXX_ASSERTIONS \
@@ -34,8 +37,7 @@ set(CMAKE_C_FLAGS "-O2 -Wall -Wformat=2 -Wconversion -Wimplicit-fallthrough \
 -D_GLIBCXX_ASSERTIONS \
 -fstrict-flex-arrays=3 \
 -fstack-clash-protection -fstack-protector-strong")
-set(CMAKE_MODULE_LINKER_FLAGS "-Wl,-z,nodlopen -Wl,-z,noexecstack \
--Wl,-z,relro -Wl,-z,now")
+set(CMAKE_MODULE_LINKER_FLAGS "-Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now")
 
 set(CMAKE_INSTALL_PREFIX /opt/trafficserver)
 set(CMAKE_INSTALL_LIBDIR lib)
