Read content from file in remap_echo plugin

--- a/etc/remap.config
+++ b/etc/remap.config
@@ -202,8 +202,8 @@
 #     will be the entire input string)
 #  3) The number of substitutions in the expansion string is limited to 10.
 #
-map /200 http://localhost @plugin=remap_echo.so @pparam=--status-code=200 @pparam=--content=Hello,world!!
-map /403 http://localhost @plugin=remap_echo.so @pparam=--status-code=403 @pparam=--content=Forbidden!
+map /200 http://localhost @plugin=remap_echo.so @pparam=--status-code=200 @pparam=--content-path=content-200
+map /403 http://localhost @plugin=remap_echo.so @pparam=--status-code=403 @pparam=--content-path=content-403
 map /!health2 http://127.0.0.1/!health @plugin=remap_passthru.so
 map /!health http://127.0.0.1 @plugin=statichit.so @pparam=--file-path=/tmp/run/trafficserver/healthcheck.txt @pparam=--mime-type=text/plain @pparam=--success-code=200 @pparam=--failure-code=403 @pparam=--max-age=0
 #map / http://localhost @plugin=remap.so @pparam=/ @pparam=http://127.0.0.1
