--- a/etc/remap.config
+++ b/etc/remap.config
@@ -202,6 +202,7 @@
 #     will be the entire input string)
 #  3) The number of substitutions in the expansion string is limited to 10.
 #
+map /normalize-ae http://localhost @plugin=tslua.so @pparam=normalize_accept_encoding.lua @pparam=3
 map /200 http://localhost @plugin=remap_echo.so @pparam=--status-code=200 @pparam=--content-path=content-200
 map /403 http://localhost @plugin=remap_echo.so @pparam=--status-code=403 @pparam=--content-path=content-403
 map /!health2 http://127.0.0.1/!health @plugin=remap_passthru.so
