--- a/etc/remap.config
+++ b/etc/remap.config
@@ -202,7 +202,7 @@
 #     will be the entire input string)
 #  3) The number of substitutions in the expansion string is limited to 10.
 #
-map /bucket1 http://192.168.2.11:9000/bucket1 @plugin=s3_auth.so @pparam=--config @pparam=s3_auth_v4.config
+map /bucket1 http://192.168.2.11:9000/bucket1 @plugin=obj_store_auth.so @pparam=--config @pparam=s3_auth_v4.config
 map /normalize-ae http://localhost @plugin=tslua.so @pparam=normalize_accept_encoding.lua @pparam=3
 map /200 http://localhost @plugin=remap_echo.so @pparam=--status-code=200 @pparam=--content-path=content-200
 map /403 http://localhost @plugin=remap_echo.so @pparam=--status-code=403 @pparam=--content-path=content-403
