--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,30 +36,17 @@ endif()
 add_compile_options(-flto -Wunused-parameter)
 add_link_options(-flto -pthread)
 
-function(add_atsplugin name)
-  add_library(${name} MODULE ${ARGN})
-  target_include_directories(${name} PRIVATE ${CMAKE_INSTALL_PREFIX}/include)
-  target_link_libraries(${name} PRIVATE ${TSAPI_LIBRARY})
-  set_target_properties(${name} PROPERTIES PREFIX "")
-  set_target_properties(${name} PROPERTIES SUFFIX ".so")
-  install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
-endfunction()
-
-add_atsplugin(hello src/hello/hello.cc)
-add_atsplugin(add_header src/add_header/add_header.cc)
-add_atsplugin(remap src/remap/remap.cc)
-add_atsplugin(remap_header_add src/remap_header_add/remap_header_add.cc)
-add_atsplugin(remap_passthru src/remap_passthru/remap_passthru.cc)
-add_atsplugin(remap_echo src/remap_echo/remap_echo.cc)
-add_atsplugin(obj_store_auth src/obj_store_auth/obj_store_auth.cc src/obj_store_auth/aws_auth_v4.cc)
-target_link_libraries(obj_store_auth PRIVATE ${SODIUM_LIBRARY})
-
-add_executable(lmdb_setup src/lmdb_setup/lmdb_setup.cc)
-target_include_directories(lmdb_setup PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_INSTALL_PREFIX}/include)
-target_link_libraries(lmdb_setup PRIVATE ${YAMLCPP_LIBRARY} ${LMDB_LIBRARY} ${SWOC_LIBRARY})
-install(TARGETS lmdb_setup ${CMAKE_INSTALL_BINDIR})
+add_subdirectory(src)
 
 include(clang_format)
-set(CLANG_FORMART_TARGET_DIRECTORIES src)
-set(CLANG_FORMART_TARGET_PATTERNS *.h;*.cpp)
-add_clang_format_target()
+add_clang_format_target(clang_format_src src)
+add_custom_target(clang_format DEPENDS clang_format_src)
+
+include(cmake_format)
+add_cmake_format_target_toplevel(cmake_format_toplevel)
+add_cmake_format_target(cmake_format_cmake_dir cmake)
+add_cmake_format_target(cmake_format_src_dir src)
+add_custom_target(cmake_format DEPENDS cmake_format_toplevel cmake_format_cmake_dir cmake_format_src_dir)
+
+# NOTE: Remove ALL below if you do not want to execute the formatting target every time.
+add_custom_target(format ALL DEPENDS clang_format cmake_format)
