--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 function(add_atsplugin name)
   add_library(${name} MODULE ${ARGN})
-  target_include_directories(${name} PRIVATE ${CMAKE_INSTALL_PREFIX}/include)
-  target_link_libraries(${name} PRIVATE ${TSAPI_LIBRARY})
+  target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR}/include ${CMAKE_INSTALL_PREFIX}/include)
+  target_link_libraries(${name} PRIVATE ${TSAPI_LIBRARY} ${YAMLCPP_LIBRARY} ${LMDB_LIBRARY} ${SWOC_LIBRARY})
   set_target_properties(${name} PROPERTIES PREFIX "")
   set_target_properties(${name} PROPERTIES SUFFIX ".so")
   install(TARGETS ${name} DESTINATION ${CMAKE_INSTALL_LIBEXECDIR})
